# torch_emt

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
tests/: test_emt.py
torch_emt/: __init__.py  calculator.py  emt_gpu_calculator.py  torch_emt.py  utils.py
